# DrovaKeeneticDesktop

./: .env.example  .gitignore  README.md  after_disconnect.py  before_connect.py  common.py  drov_socket@.service  precommit.sh  pyproject.toml  socket.sh  socket_listen.sh  test_CheckDesktop.py  test_common.py  test_full_chain.sh  wheel2deb.yml
.github/workflows/: build.yml  lint.yml  test.yml
drova_desktop_keenetic/common/: __init__.py  after_disconnect.py  before_connect.py  commands.py  config.py  constants.py  contants.py  context.py  drive_protectors.py  drova.py  drova_poll.py  drova_server_binary.py  drova_session_transition.py  drova_socket.py  drova_validate.py  helpers.py  patch.py  validate_env.py
drova_desktop_keenetic/patches/: basic.py  obs.py
drova_desktop_keenetic/tests/: conftest.py  test_basic_patchers.py  test_commands.py  test_common.py  test_drova.py  test_drova_session_transition.py  test_full.py  test_helpers.py  test_poll.py  test_socket.py
drova_desktop_keenetic/tests/fixtures/: fake_drova.py
init.d/: drova_listen  drova_poll  drova_socket
installer/: drovadesktop.iss  install-ssh.ps1
installer/dists/ShadowDefender/: res.ini
nginx-rtmp/: cleanup.sh  docker-compose.yml  nginx.conf
systemd/: drova_poll@.service
