[tool.poetry]
name = "drova-keenetic-desktop"
version = "0.1.0"
description = ""
authors = ["sergius-dart <sergius-dart@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
paramiko = "^4.0.0"
python-dotenv = "^1.1.1"
mslex = "^1.3.0"
requests = "^2.32.5"
pydantic = "^2.11.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
isort = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#command-line-options
line-length = 120
target-version = ['py311']